fix layout issues

--- a/staticfiles/css/main-desktop.css
+++ b/staticfiles/css/main-desktop.css
@@ -34,6 +34,14 @@ html, body {
 
 }
 
+@media only screen and (max-width: 768px) {
+	.container-fluid, 
+	.container {
+	padding: 0 !important;
+}
+
+}
+
 
 h1 {
   	font-size: clamp(2rem, 2.5vw, 2.5rem);
@@ -322,7 +330,7 @@ a[aria-expanded="true"] {
 .landing-text {
 	color: var(--blue);
 	background-color: var(--white);
-	padding: 2rem 4rem;
+	padding: 1.5rem;
 }
 
 @media only screen and (max-width: 768px){
@@ -463,13 +471,18 @@ a[aria-expanded="true"] {
 }
 
 @media only screen and (max-width: 768px){
+	.form-container {
+		width:100%;
+	},
+	.contact-flex-item {
+	width:100% !!important;
+},
 	.contact-flex-item input,
 .contact-flex-item textarea {
 	width: 100%;
 },
-.contact-flex-item {
-	width:100%;
-}
+
+
 }
 
 .contact-flex-item .btn {
